--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,1 +1,26 @@
+name: Update Zero Termico Data
 
+on:
+  schedule:
+    - cron: '0 8 * * *'  # Esegue ogni giorno alle 8:00 UTC
+  workflow_dispatch:      # Permette l'esecuzione manuale
+
+jobs:
+  update-data:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas requests beautifulsoup4
+    
+    - name: Run update script
+      run: python update_data.py
