--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -19,10 +19,22 @@ jobs:
       with:
         python-version: '3.x'
     
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pandas requests beautifulsoup4
+    
+    - name: Verify dependencies
+      run: |
+        pip check
     
     - name: Run update script
       run: python update_data.py
